# mod-eclipse

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_patch.diff
.github/: README.md
conf/: mod_eclipse.conf.dist
docs/: HOW-TO-ADD-METHOD.md  HOW-TO-INSTALL.md  generator.moon
docs/french/: HOW-TO-INSTALL.md
src/: EclipseLoader.cpp  EclipseScript.cpp
src/LuaEngine/: EclipseConfig.cpp  EclipseConfig.hpp  EclipseIncludes.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventManager.cpp  EventManager.hpp  Events.hpp  LuaBindings.cpp  LuaBindings.hpp  LuaCache.cpp  LuaCache.hpp  LuaCompiler.cpp  LuaCompiler.hpp  LuaEngine.cpp  LuaEngine.hpp  LuaManager.cpp  LuaManager.hpp  LuaPathManager.cpp  LuaPathManager.hpp  LuaState.cpp  LuaState.hpp  MapStateManager.cpp  MapStateManager.hpp  MessageManager.cpp  MessageManager.hpp  ScriptLoader.cpp  ScriptLoader.hpp
src/LuaEngine/AI/: EclipseCreatureAI.cpp  EclipseCreatureAI.hpp
src/LuaEngine/Core/: EclipseConfig.cpp  EclipseConfig.hpp  EclipseIncludes.hpp  LuaEngine.cpp  LuaEngine.hpp  MapStateManager.cpp  MapStateManager.hpp
src/LuaEngine/Events/: EventDispatcher.cpp  EventDispatcher.hpp  EventManager.hpp  EventTraits.hpp  EventTypes.hpp  Events.hpp
src/LuaEngine/Methods/: GlobalMethods.hpp  Methods.hpp  ObjectGuidMethods.hpp  PlayerMethods.hpp  UnitMethods.hpp  WorldObjectMethods.hpp
src/LuaEngine/Scripting/: LuaCache.cpp  LuaCache.hpp  LuaCompiler.cpp  LuaCompiler.hpp  LuaPathManager.cpp  LuaPathManager.hpp  LuaState.cpp  LuaState.hpp  ScriptLoader.cpp  ScriptLoader.hpp
src/LuaEngine/Utils/: EclipseLogger.cpp  EclipseLogger.hpp  MessageManager.cpp  MessageManager.hpp  ObjectPools.hpp
src/lualib/luajit/: CMakeLists.txt
src/sol/: config.hpp  luajit_wrapper.hpp
